# asdm

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: cargo-update.yml  ci.yml  cli-ci.yml  cli-publish.yml  cockpit-release.yml  publish.yml  validate-registry.yml
cli/: LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
cli/registry/: policy.yaml  v0.1.2.json  v0.1.3.json  v0.5.1.json  v0.6.0.json  v1.0.0.json
cli/schemas/: agent.schema.json  lock.schema.json  manifest.schema.json  profile.schema.json
cli/scripts/: validate.ts  (+1 more)
cockpit/: .env.example  AGENTS.md  CONTEXT.md  INSTALL.md  PLAN.md  README.md  package-lock.json  package.json  session-ses_25e3.md  vite.config.ts
cockpit/src-tauri/: Cargo.toml  tauri.conf.json
cockpit/src-tauri/capabilities/: default.json
cockpit/src-tauri/src/: lib.rs  main.rs
cockpit/src-tauri/src/commands/: agent.rs  auth.rs  github.rs  mod.rs  observability.rs  pty.rs  registry.rs  workflow.rs
registry/: latest.json  policy.yaml  v0.1.0.json  v0.1.1.json  v0.1.2.json  v0.1.3.json  v0.1.4.json  v0.2.0.json  v0.3.0.json  v0.4.0.json  v0.4.1.json  v0.5.0.json  v0.5.1.json  v0.5.2.json  v0.6.0.json  v0.6.1.json  v0.6.2.json  v0.7.0.json  v1.0.0.json
schemas/: agent.schema.json  command.schema.json  config.schema.json  manifest.schema.json  overlay.schema.json  profile.schema.json  skill.schema.json
scripts/: build-manifest.ts  validate.ts
(+181 files in other folders)
